data/all_generated_tests/raw_wast_tests/call_TypeMismatchinControlFlowInstructions_3727.wast
;; - **Test 6**: Implement a function that is called within a `try-catch` block with improper type arguments (`i32` instead of `i64`). This ensures that the exception handling and stack operations are correctly managed.

(assert_invalid
  (module
    (type (func (param i64)))
    (func $incorrect-arg (try (do (call 0)) (catch_all)))
  )
  "type mismatch"
)